add github link on header

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 </li>
                 <li><a id="header" class="four" href="#"><span class="glyphicon glyphicon-picture"></span> 參與紀錄</a>
                 </li>
+                <li><a id="header" href="https://github.com/KevinLai02/htmlSchoolFinalWork"><span
+                            class="glyphicon glyphicon-globe"></span> github-link</a>
+                </li>
             </ul>
         </div>
     </nav>
